# nesoi

./: .gitignore  LICENSE  README.md  README.org  create_environment  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: test_comprehensive.yml  upgrade_test_constraints.yml
environment_files/: forum_image_sc_71524.yml
examples/: animated_circles.py  bdv_in_napari.py  big_idr_test.py  directbuffer_napari.py  forum_label_array_indexing.py  idr_tile.py  interactive_segmentation.py  mandelbrot_vizarr.py  multiscale_prototype.py  multiscale_tiled_loading_napari.py  napari_turing_animation.py  omero_test.py  omero_utils.py  open_idr.py  penrose_lsystem.py  penrose_shapes.py  prime_spirals.py  pytorch_neural_ca.py  recursive_lines.py  simple_blender.py  simple_tiled_loading_napari.py  stable_diffusion_animation.py  stable_diffusion_img2img.py  turing_example.py  tyssue_demo.py  tyssue_history_surface.py  tyssue_napari_apoptosis.py  tyssue_napari_simple.py  tyssue_surface_timeseries.py  tyssue_utils.py  vispy_dask_delayed_bug.py  vispy_instanced.py  wrap_arraylike_hdf5.py
examples/bg_gen/: kyle_layer.py
notebooks/: tyssue-B-Apoptosis.ipynb
tools/: minreq.py
