[metadata]
name = nesoi
version = 0.0.1
description = A personal napari distribution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kephale/nesoi
author = Kyle Harrington
author_email = czi@kyleharrington.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/kephale/nesoi/issues
    Documentation = https://github.com/kephale/nesoi#README.md
    Source Code = https://github.com/kephale/nesoi
    User Support = https://github.com/kephale/nesoi/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

# [egg_info]
# egg_base = .

# [options.packages.find]
# where = src

[options.entry_points]
napari.manifest =
    nesoi = nesoi:napari.yaml

[options.extras_require]
pyside2 =
    PySide2>=5.13.2,!=5.15.0 ; python_version != '3.8'
    PySide2>=5.14.2,!=5.15.0 ; python_version == '3.8'
pyside =  # alias for pyside2
    %(pyside2)s
pyqt5 =
    PyQt5>=5.12.3,!=5.15.0
pyqt =  # alias for pyqt5
    %(pyqt5)s
qt =  # alias for pyqt5
    %(pyqt5)s
# all is the full "batteries included" extra.
all =
    %(pyqt5)s
# optional (i.e. opt-in) packages, see https://github.com/napari/napari/pull/3867#discussion_r864354854
optional =
    triangle
testing =
    babel>=2.9.0
    fsspec
    hypothesis>=6.8.0
    lxml
    matplotlib
    pooch>=1.6.0
    pytest-cov
    pytest-qt
    pytest-pretty>=1.1.0
    pytest>=7.0.0
    tensorstore>=0.1.13
    torch>=1.7
    virtualenv
    xarray>=0.16.2
    zarr>=2.12.0
    IPython>=7.25.0
    qtconsole>=4.5.1
    rich>=12.0.0
release = 
    PyGithub>=1.44.1
    twine>=3.1.1
    gitpython>=3.1.0
    requests-cache>=0.9.2
dev =
    black
    check-manifest>=0.42
    pre-commit>=2.9.0
    pydantic[dotenv]
    rich
    %(testing)s
build =
    black
    ruff
    pyqt5
bundle_build =
    briefcase==0.3.1
    dmgbuild>=1.4.2
    markupsafe<2.1
    PySide2==5.15.2
    ruamel.yaml
    tomlkit
    wheel
bundle_run =
    imagecodecs
    pip
    PySide2==5.15.2
    scikit-image[data]
    zarr
    wheel
    pims
    numpy==1.19.3

[options.package_data]
* = *.yaml
